--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -13,6 +13,12 @@ body {
     position: relative;
 }
 
+h1,h2 {
+	font-weight: 100;
+	text-shadow: 0 0 5px #000;
+	color: #fff;
+}
+
 #product-list {
 	list-style: none;
 	padding: 20px 0;
